# unicode-general-category

data/: README.md  generate.js  input-basic.txt  input-supplementary.txt
language-specific/actionscript/: asconfig.json  build-swc.cmd
language-specific/actionscript/src/com/hydroper/unicode/: GeneralCategory.as
language-specific/actionscript/src/com/matheusdiasdesouzads/unicode/: GeneralCategory.as
language-specific/actionscript/swc/: unicode-general-category.swc
language-specific/javascript-nodejs/: general-category.js
language-specific/rust/: Cargo.toml
language-specific/rust/src/: lib.rs
nodejs-version/: general-category.js
